--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --secondary-light: 166, 171, 180;
   --tertiary-text: 250, 250, 250;
   --border: 250, 250, 250;
-  --extra-bg: 11,11,11;
+  --extra-bg: 11, 11, 11;
 }
 
 .light {
@@ -33,9 +33,9 @@
     color: rgb(var(--secondary));
   }
 
-  .description-text{
+  .description-text {
     font-size: 15px;
-    letter-spacing:0.5px;
+    letter-spacing: 0.5px;
     color: rgb(var(--secondary-light));
   }
 
@@ -163,10 +163,10 @@
     @apply [filter:brightness(0)_saturate(100%)];
   }
 
-  .dark .footer-logo-filter{
+  .dark .footer-logo-filter {
     @apply [filter:brightness(50)_saturate(0%)];
   }
-  .custom-image-1{
-    background-image: url('/about1.jpeg');
+  .custom-image-1 {
+    background-image: url("/about1.jpeg");
   }
 }
